# micropython-package-validation

src/setup2upypackage/: main.py  pyproject2upypackage.py
tests/data/: pyproject.toml
