[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'micropython-package-validation-example'
dynamic = ["version"]

dependencies = [
    'dependency_1',
    'dependency_2',
]

[tool.setuptools]
packages = ["subdir1", "other_dir"]

[tool.setuptools.dynamic]
version = {attr = "sample_version.__version__"}

#[tool.setuptools.packages.find]
#where = ["."]
#namespaces = false

[project.urls]
Source = "https://github.com/test-user/micropython-package-validation-example"